include Makefile.am.common
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5580 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/common/Makefile.am
+++ b/appl/ftp/common/Makefile.am
@@ -1,13 +1,12 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = foreign no-dependencies
+include $(top_srcdir)/Makefile.am.common
 
-CFLAGS = $(WFLAGS) @CFLAGS@
-
-INCLUDES = $(INCLUDE_krb4) 
+INCLUDES += $(INCLUDE_krb4) 
 
 noinst_LIBRARIES = libcommon.a
 
 libcommon_a_SOURCES = \
 	sockbuf.c \
-	buffer.c
+	buffer.c \
+	common.h
