--- a/appl/telnet/telnet/Makefile.am
+++ b/appl/telnet/telnet/Makefile.am
@@ -1,19 +1,18 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = no-dependencies foreign
+include $(top_srcdir)/Makefile.am.common
 
-INCLUDES = -I$(top_builddir)/include -I$(srcdir)/..
+INCLUDES += -I$(srcdir)/..
 
 bin_PROGRAMS = telnet
 
 telnet_SOURCES  = authenc.c commands.c main.c network.c ring.c \
 		  sys_bsd.c telnet.c terminal.c \
-		  utilities.c
+		  utilities.c defines.h externs.h ring.h telnet_locl.h types.h
 
 LDADD = ../libtelnet/libtelnet.a \
-	$(top_builddir)/lib/krb5/libkrb5.la \
+	$(LIB_krb5) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/asn1/libasn1.la \
-	@LIB_tgetent@ \
+	$(LIB_tgetent) \
 	$(top_builddir)/lib/roken/libroken.la
