--- a/appl/telnet/telnetd/Makefile.am
+++ b/appl/telnet/telnetd/Makefile.am
@@ -1,20 +1,19 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = no-dependencies foreign
+include $(top_srcdir)/Makefile.am.common
 
-INCLUDES = -I$(top_builddir)/include -I$(srcdir)/.. $(INCLUDE_krb4)
+INCLUDES += -I$(srcdir)/.. $(INCLUDE_krb4)
 
 libexec_PROGRAMS = telnetd
 
 telnetd_SOURCES  = telnetd.c state.c termstat.c slc.c sys_term.c \
-		   utility.c global.c authenc.c
+		   utility.c global.c authenc.c defs.h ext.h telnetd.h
 
 LDADD = \
 	../libtelnet/libtelnet.a \
-	$(top_builddir)/lib/krb5/libkrb5.la \
+	$(LIB_krb5) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/asn1/libasn1.la \
-	@LIB_tgetent@ \
-	@LIB_logwtmp@ \
+	$(LIB_tgetent) \
+	$(LIB_logwtmp) \
 	$(top_builddir)/lib/roken/libroken.la
