--- a/lib/com_err/Makefile.am
+++ b/lib/com_err/Makefile.am
@@ -1,21 +1,21 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = no-dependencies foreign
+include $(top_srcdir)/Makefile.am.common
 
 YFLAGS = -d
-
-INCLUDES = -I$(top_builddir)/include -I$(srcdir)
 
 lib_LTLIBRARIES = libcom_err.la
 
 bin_PROGRAMS = compile_et
 
-compile_et_SOURCES = compile_et.c parse.y lex.l
+include_HEADERS = com_err.h com_right.h
 
-libcom_err_la_SOURCES = error.c com_err.c
+compile_et_SOURCES = compile_et.c compile_et.h parse.y lex.l
+
+libcom_err_la_SOURCES = error.c com_err.c roken_rename.h
 
 CLEANFILES = lex.c parse.c parse.h
 
 $(compile_et_OBJECTS): parse.h
 
-compile_et_LDADD = ../roken/libroken.la @LEXLIB@
+compile_et_LDADD = ../roken/libroken.la $(LEXLIB)
