--- a/lib/otp/Makefile.am
+++ b/lib/otp/Makefile.am
@@ -1,8 +1,6 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = no-dependencies foreign
-
-INCLUDES = -I$(top_builddir)/include
+include $(top_srcdir)/Makefile.am.common
 
 noinst_PROGRAMS = otptest
 
@@ -10,6 +8,8 @@ otptest_LDADD = libotp.la \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/roken/libroken.la \
 	$(DBLIB)
+
+include_HEADERS = otp.h
 
 lib_LTLIBRARIES = libotp.la
 
@@ -20,4 +20,7 @@ libotp_la_SOURCES = \
 	otp_md.c \
 	otp_parse.c \
 	otp_print.c \
-	otp_verify.c
+	otp_verify.c \
+	otp_locl.h \
+	otp_md.h \
+	roken_rename.h
