--- a/appl/Makefile.am
+++ b/appl/Makefile.am
@@ -1,5 +1,7 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = foreign no-dependencies 
+include $(top_srcdir)/Makefile.am.common
+
 SUBDIRS = afsutil ftp login @OTP_dir@ popper push rsh telnet test
+DIST_SUBDIRS = afsutil ftp login otp popper push rsh telnet test
 # kauth kx
