--- a/appl/afsutil/Makefile.am
+++ b/appl/afsutil/Makefile.am
@@ -1,17 +1,15 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = no-dependencies foreign
-
-INCLUDES = -I$(top_builddir)/include
+include $(top_srcdir)/Makefile.am.common
 
 if KRB4
 AFSPROGS = afslog
-else
-AFSPROGS = 
 endif
 bin_PROGRAMS = $(AFSPROGS)
 
-LDADD = $(top_builddir)/lib/kafs/libkafs.a $(AIX_EXTRA_KAFS) \
+EXTRA_bin_PROGRAMS = afslog
+
+LDADD = $(LIB_kafs) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/krb5/libkrb5.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
