--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,4 +1,9 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = foreign no-dependencies
-SUBDIRS	= roken editline com_err sl asn1 des krb5 kafs hdb kadm5 gssapi @OTP_dir@
+include $(top_srcdir)/Makefile.am.common
+
+SUBDIRS = roken editline com_err sl asn1 des krb5 \
+	kafs hdb kadm5 gssapi @OTP_dir@
+
+DIST_SUBDIRS = roken editline com_err sl asn1 des krb5 \
+	kafs hdb kadm5 gssapi otp
