--- a/lib/hdb/Makefile.am
+++ b/lib/hdb/Makefile.am
@@ -1,12 +1,8 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = no-dependencies foreign
+include $(top_srcdir)/Makefile.am.common
 
-SUFFIXES = .x .et .h
-
-INCLUDES = $(WFLAGS) -I../asn1 -I$(srcdir)/../asn1
-
-COMPILE_ET = ../com_err/compile_et
+INCLUDES += -I../asn1 -I$(srcdir)/../asn1
 
 BUILT_SOURCES = asn1_Key.c asn1_Event.c asn1_HDBFlags.c asn1_hdb_entry.c \
 	asn1_Salt.c hdb_err.c hdb_err.h
@@ -28,20 +24,9 @@ lib_LTLIBRARIES = libhdb.la
 libhdb_la_SOURCES = hdb.c common.c db.c ndbm.c $(BUILT_SOURCES)
 
 include_HEADERS = hdb.h
-incdir = $(includedir)
-inc_DATA = hdb_err.h hdb_asn1.h
+include__DATA = hdb_err.h hdb_asn1.h
 
 libhdb_la_LIBADD = 
-
-idir = $(top_builddir)/include
-
-all-local: $(inc_DATA)
-	@for i in $(inc_DATA); do \
-		if cmp -s  $$i $(idir)/$$i 2> /dev/null ; then :; else\
-			echo " $(INSTALL_DATA) $$i $(idir)/$$i"; \
-			$(INSTALL_DATA) $$i $(idir)/$$i; \
-		fi ; \
-	done
 
 $(foo) hdb_asn1.h: asn1_files
 
@@ -49,16 +34,3 @@ asn1_files: ../asn1/asn1_compile $(srcdir)/hdb.asn1
 	../asn1/asn1_compile $(srcdir)/hdb.asn1 hdb_asn1
 
 $(libhdb_la_OBJECTS): hdb_asn1.h hdb_err.h
-
-.x.c:
-	@cmp -s $< $@ 2> /dev/null || cp $< $@
-
-.et.h:
-	$(COMPILE_ET) $<
-
-.et.c:
-	$(COMPILE_ET) $<
-
-hdb_err.h: hdb_err.et
-
-hdb_err.c: hdb_err.et
