--- a/lib/45/Makefile.am
+++ b/lib/45/Makefile.am
@@ -1,11 +1,11 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = no-dependencies foreign
+include $(top_srcdir)/Makefile.am.common
+
+INCLUDES += $(INCLUDE_krb4)
 
 lib_LIBRARIES = @EXTRA_LIB45@
 
 EXTRA_LIBRARIES = lib45.a
 
-INCLUDES = $(INCLUDE_krb4)
-
-lib45_a_SOURCES = get_ad_tkt.c mk_req.c
+lib45_a_SOURCES = get_ad_tkt.c mk_req.c 45_locl.h
