include Makefile.am.common
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5588 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ftpd/Makefile.am
+++ b/appl/ftp/ftpd/Makefile.am
@@ -1,10 +1,8 @@
 # $Id$
 
-CFLAGS = @CFLAGS@ $(WFLAGS)
+include $(top_srcdir)/Makefile.am.common
 
-AUTOMAKE_OPTIONS = foreign no-dependencies
-
-INCLUDES = -I$(srcdir)/../common $(INCLUDE_krb4) -DFTP_SERVER
+INCLUDES += -I$(srcdir)/../common $(INCLUDE_krb4) -DFTP_SERVER
 
 libexec_PROGRAMS = ftpd
 
