--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,6 +1,8 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = foreign no-dependencies no-texinfo.tex
+include $(top_srcdir)/Makefile.am.common
+
+AUTOMAKE_OPTIONS += no-texinfo.tex
 
 info_TEXINFOS = heimdal.texi
 heimdal_TEXINFOS = intro.texi install.texi setup.texi kerberos4.texi
