include Makefile.am.common
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5590 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,9 @@
 # $Id$
 
-AUTOMAKE_OPTIONS = foreign no-dependencies
+include $(top_srcdir)/cf/Makefile.am.common
+
 SUBDIRS	= include lib kuser kdc admin kadmin kpasswd appl doc
 
 ACLOCAL = @ACLOCAL@ -I $(srcdir)/cf
+
+EXTRA_DIST = Makefile.am.common krb5.conf
