remove EXTRA_bin_PROGRAMS
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5597 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/afsutil/Makefile.am
+++ b/appl/afsutil/Makefile.am
@@ -7,7 +7,7 @@ AFSPROGS = afslog
 endif
 bin_PROGRAMS = $(AFSPROGS)
 
-EXTRA_bin_PROGRAMS = afslog
+afslog_SOURCES = afslog.c
 
 LDADD = $(LIB_kafs) \
 	$(LIB_krb4) \
