make install-build-headers a multi dependency target
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5611 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/Makefile.am.common
+++ b/cf/Makefile.am.common
@@ -42,7 +42,7 @@ install-suid-programs:
 
 install-exec-hook: install-suid-programs
 
-install-build-headers: 
+install-build-headers::
 	@foo='$(include_HEADERS) $(build_HEADERZ)'; \
 	for f in $$foo; do \
 		if test -f "$(srcdir)/$$f"; then file="$(srcdir)/$$f"; \
