clean some lex.c parse.c parse.h
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5617 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/sl/Makefile.am
+++ b/lib/sl/Makefile.am
@@ -21,6 +21,8 @@ mk_cmds_SOURCES = make_cmds.c make_cmds.h parse.y lex.l snprintf.c
 ssincludedir = $(includedir)/ss
 ssinclude_HEADERS = ss.h
 
+CLEANFILES = lex.c parse.c parse.h
+
 $(mk_cmds_OBJECTS): parse.h
 
 LDADD = ../roken/libroken.la $(LEXLIB)
