--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,8 +2,12 @@
 
 include $(top_srcdir)/Makefile.am.common
 
+if KRB4
+dir_45 = 45
+endif
+
 SUBDIRS = roken editline com_err sl asn1 des krb5 \
-	kafs hdb kadm5 gssapi @OTP_dir@
+	kafs hdb kadm5 gssapi $(dir_45) @OTP_dir@
 
 DIST_SUBDIRS = roken editline com_err sl asn1 des krb5 \
-	kafs hdb kadm5 gssapi otp
+	kafs hdb kadm5 gssapi 45 otp
